MN-99 Updating CourseController.java to allow filterring